# BangSam

./: .env  .gitignore  DBdiagram  README.md  a.text  build.sh  db.sqlite3  default_data.json  dong.json  dong.py  dong_list.json  gu_list.json  house_data.json  option.py  option_list.json  options.json  options.py  pyproject.toml  render.yaml  safetyoptions.json  tempCodeRunnerFile.py  메모장  방삼.txt
chatRoom/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chatRoom/migrations/: 0001_initial.py  0002_chatroom_house.py  0002_initial.py
common/: models.py  tests.py
config/: asgi.py  settings.py  urls.py
houselists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
houselists/migrations/: 0001_initial.py  0002_alter_houselist_recently_views_alter_houselist_user.py  0002_initial.py  0002_rename_house_houselist_recently_views.py  0003_houselist_add_time.py  0003_initial.py  0004_alter_houselist_id.py  0004_remove_houselist_add_time.py  0005_alter_houselist_id.py
houses/: admin.py  dong.json  dong.py  models.py  serializers.py  urls.py  views.py
houses/migrations/: 0001_initial.py  0002_alter_house_is_sale.py  0002_alter_house_options.py  0002_gu_list_remove_house_station_distance_house_owner_and_more.py  0002_initial.py  0003_alter_house_dong.py  (+43 more)
images/: models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+28 files in other folders)
